[gd_scene load_steps=7 format=2]

[ext_resource path="res://Font/Roboto-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Assets/buttonicon/Play_512.png" type="Texture" id=3]
[ext_resource path="res://Assets/buttonicon/Setting_512.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Cloud Spawner.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 15.0
margin_right = 144.0
margin_bottom = 57.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 144.0
margin_bottom = 19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 30.0
margin_right = 113.0
margin_bottom = 19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 79.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "High Score:"

[node name="Label2" type="Label" parent="VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 83.0
margin_right = 83.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 23.0
margin_right = 144.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer2"]
margin_left = 48.0
margin_right = 95.0
margin_bottom = 19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 43.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Coins:"

[node name="Label2" type="Label" parent="VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 47.0
margin_right = 47.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="CloudSpawner" parent="Node2D" instance=ExtResource( 5 )]

[node name="Container" type="Node2D" parent="."]
z_index = -1

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 72.0
margin_top = 128.0
margin_right = 72.0
margin_bottom = 128.0

[node name="Play" type="TextureButton" parent="."]
margin_left = 50.0
margin_top = 85.0
margin_right = 562.0
margin_bottom = 597.0
rect_scale = Vector2( 0.1, 0.1 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureButton" parent="."]
margin_left = 50.0
margin_top = 135.0
margin_right = 562.0
margin_bottom = 647.0
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 4 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
